syntax = "proto3";

option java_multiple_files = true;
option java_package = "globesort";
option java_outer_classname = "GlobeSortProto";

service GlobeSort {
  rpc Ping (Empty) returns (Empty) {}
  rpc SortIntegers (IntArray) returns (Test) {}
}

message Empty { }

message IntArray {
  repeated int32 values = 1;
}

message Test {
  repeated int32 values = 1;
  int64 time_taken = 2;
}
